--- a/e-mads.bd/index.html
+++ b/e-mads.bd/index.html
@@ -157,7 +157,7 @@
             <div class="row">
                <div class="col-md-12">
                     <div class="heading full text_align_center">
-                        <h2 class="white_font full text_align_center">Our Cocsultant</h2>
+                        <h2 class="white_font full text_align_center">Our Consultant</h2>
                     </div>
                 </div>
             </div>
